route wise component created

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@
     /* ... define other light mode colors */
 }
 
+/* .menu a.active {
+    color: white;
+}
+
+.menu a {
+    background-color: transparent;
+}
+ */
